# otus-cpp

./: .travis.yml  README.md
common/: debug.hpp
common/stdex/: exception.hpp
experimental-auto_predictions/: auto_prediction.cpp  template_predictions.cpp
experimental-custom_tuple/: custom_tuple.cpp
hw1.1-CI_CD_helloworld/: CMakeLists.txt
hw1.1-helloworld/: CMakeLists.txt  README.md
hw1.2-ip_filter/: CMakeLists.txt  IpV4_c.cpp  IpV4_c.hpp  README.md  main.cpp  test_version.cpp  utils.cpp  utils.hpp
hw1.2-ip_filter/test/: manual_test.sh  test_main.cpp
hw2-custom_allocator/: CMakeLists.txt  custom_allocator.hpp  custom_list.hpp  main.cpp
hw2-custom_allocator/test/: test_custom_alloc.cpp  test_custom_list.cpp  test_main.cpp
hw3-print_ip/: CMakeLists.txt  main.cpp  print_ip.hpp
hw6-bulk/: CMakeLists.txt  FileBulkHandler.cpp  FileBulkHandler.hpp  IBulkHandler.hpp  StdinCommandHandler.cpp  StdinCommandHandler.hpp  StdoutBulkHandler.cpp  StdoutBulkHandler.hpp  main.cpp
hw6-bulk/test/: test_main.cpp
scripts/: deploy.sh  travis_yml_generator.py
